--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     <label for="login-password">Password:</label>
                     <input type="password" id="login-password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <a href="index.html"></a><button type="submit" class="btn">Login</button>
                 <p>Don't have an account? <a href="#" onclick="toggleForm()">Register here</a></p>
             </form>
         </div>
