--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <div class="container">
             <!-- header -->
     <nav>
         <div class="logo">
@@ -142,6 +143,7 @@
 
     </div>
     </div>
+</div>
     <!-- footer -->
      
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
